--- a/force-app/main/default/classes/AnonymousApex.cls
+++ b/force-app/main/default/classes/AnonymousApex.cls
@@ -23,6 +23,7 @@ public with sharing class AnonymousApex {
                                 err.getStatusCode() +
                                 ' - ' +
                                 err.getMessage());
+                    system.debug('Not Ok');
                 }
             }
 
